--- a/.github/workflows/update-count.yml
+++ b/.github/workflows/update-count.yml
@@ -1,10 +1,10 @@
 name: Update Total Questions
 
 on:
-  workflow_dispatch:       # ← allows manual run
+  workflow_dispatch:       # allows manual run
   push:
     paths:
-      - 'dataset/**'
+      - 'Afghanistan-kankoor-questions-dataset/dataset/**'
   schedule:
     - cron: '0 0 * * *' # daily at midnight
 
@@ -35,4 +35,4 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
           git commit -m "Update total questions count [skip ci]" || echo "No changes"
-          git push
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
