--- a/.github/workflows/update-count.yml
+++ b/.github/workflows/update-count.yml
@@ -1,45 +1,59 @@
 name: Update Total Questions
 
 on:
-  workflow_dispatch:       # allows manual run
   push:
+    branches: [main, master]
     paths:
-      - 'Afghanistan-kankoor-questions-dataset/dataset/**'
-  schedule:
-    - cron: '0 0 * * *' # daily at midnight
+      - 'dataset/data/**/*.json'
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   update-count:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          node-version: '20'
-
-      - name: Count questions
-        run: node countQuestions.js
-
-      - name: Update README badge
+          token: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Count all questions across subjects
+        id: count
         run: |
-          COUNT=$(cat questions-count.txt)
-          sed -i "s/Total%20Questions-[0-9]\+/Total%20Questions-$COUNT/" README.md
-          echo "Updated README badge to $COUNT questions"
-
-      - name: Commit changes
+          total=0
+          
+          # Loop through all JSON files in dataset/data subdirectories
+          for file in dataset/data/*/*.json; do
+            if [ -f "$file" ] && [ "$(basename "$file")" != "schema.json" ]; then
+              count=$(jq 'length' "$file" 2>/dev/null || echo 0)
+              echo "Found $count questions in $file"
+              total=$((total + count))
+            fi
+          done
+          
+          echo "Total questions: $total"
+          echo "TOTAL_QUESTIONS=$total" >> $GITHUB_ENV
+      
+      - name: Update README with total count
         run: |
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md
-          git commit -m "Update total questions count [skip ci]" || echo "No changes"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Push changes
-        uses: ad-m/github-push-action@v0.6.0
+          # Add or update the total questions badge/line in README
+          if grep -q "Total Questions:" README.md; then
+            sed -i "s/Total Questions: [0-9]*/Total Questions: $TOTAL_QUESTIONS/" README.md
+          else
+            # Add after the title section
+            sed -i '/## 1\. Project Description/i \
+**Total Questions:** '"$TOTAL_QUESTIONS"'\
+\
+' README.md
+          fi
+      
+      - name: Commit and push if changed
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          commit_message: "🔄 Auto-update: Total questions count → ${{ env.TOTAL_QUESTIONS }}"
+          file_pattern: README.md
+          commit_user_name: github-actions[bot]
+          commit_user_email: 41898282+github-actions[bot]@users.noreply.github.com
