--- a/.github/workflows/update-count.yml
+++ b/.github/workflows/update-count.yml
@@ -5,6 +5,8 @@ on:
     branches: [main, master]
     paths:
       - 'Afghanistan-kankoor-questions-dataset/dataset/data/**/*.json'
+  schedule:
+    - cron: '0 12 * * *'  # Runs daily at 12:00 PM UTC (4:30 PM Afghanistan time)
   workflow_dispatch:
 
 permissions:
